--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies-next": "^4.1.1",
     "emoji-flags": "^1.3.0",
     "next": "14.2.2",
     "react": "^18",
