--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "dev:middleware": "MIDDLEWARE=true next dev",
+    "build": "rm -rf .next && next build",
+    "build:start": "rm -rf .next && next build && yarn start",
     "start": "next start",
     "lint": "next lint"
   },
