--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
       }
     ],
     "paths": {
-      "@~components/*": ["src/components/*"],
-      "@src/*": ["src/*"],
-      "@styles/*": ["src/styles/*"]
+      "~components/*": ["src/components/*"],
+      "~src/*": ["src/*"],
+      "~styles/*": ["src/styles/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
