--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev:middleware": "MIDDLEWARE=true next dev",
     "build": "rm -rf .next && yarn lint:fix && next build",
     "build:start": "yarn build && yarn start",
-    "start": "next start",
+    "start": "next start -p 8080",
     "lint": "next lint",
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "eslint-plugin-padding-line": "^1.1.1",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "next": "14.2.2",
     "react": "^18",
