--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "eslint-plugin-padding-line": "^1.1.1",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-swipeable": "^7.0.1",
-    "sass": "^1.77.6"
+    "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
+    "eslint-plugin-padding-line": "^1.1.1",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "css-loader": "^7.1.2",
+    "sass": "^1.77.6",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
